2007-01-09  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el
	(select-safe-coding-system-interactively): Fix message.

2007-01-09  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el: (tramp-process-one-action): Remove `with-timeout'.
	(tramp-process-actions): Add optional parameter TIMEOUT.
	(tramp-open-connection-telnet, tramp-open-connection-rsh)
	(tramp-open-connection-su): Add timeout of 60".

2007-01-09  Richard Stallman  <rms@gnu.org>

	* progmodes/compile.el (compile): Doc fix.

2007-01-09  Markus Triska  <markus.triska@gmx.at>

	* tumme.el (tumme-display-thumb): Doc fix.

2007-01-08  Juanma Barranquero  <lekktu@gmail.com>

	* battery.el (battery-search-for-one-match-in-files):
	* bindings.el (mode-line-minor-mode-help):
	* x-dnd.el (x-dnd-types-alist):
	* calendar/icalendar.el (icalendar-import-buffer):
	* term/mac-win.el (mac-dnd-types-alist): Fix typo in docstring.

	* progmodes/vhdl-mode.el (vhdl-save-caches): Fix typo in error message.

2007-01-07  Chris Moore  <christopher.ian.moore@gmail.com>  (tiny change)

	* replace.el (replace-regexp): Fix typo in docstring.

2007-01-07  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-langs.el (c-operators, c-filter-ops):
	Amend doc-string and comments.

2007-01-06  Eli Zaretskii  <eliz@gnu.org>

	* files.el (abbreviate-file-name): Doc fix.

2007-01-06  Markus Triska  <triska@gmx.at>

	* subr.el (split-string): Remove spurious ")" from doc string.

2007-01-05  Takaaki Ota  <Takaaki.Ota@am.sony.com>

	* textmodes/table.el (table--warn-incompatibility):
	Use display-warning instead of momentary-string-display.

2007-01-05  Richard Stallman  <rms@gnu.org>

	* image.el (image-type-header-regexps): Recognize xbm more strictly.

	* simple.el (backward-kill-word): Doc fix.

2007-01-05  Romain Francoise  <romain@orebokech.com>

	* international/mule.el (sgml-html-meta-auto-coding-function):
	Ensure that the buffer contains a HTML document.

2007-01-05  Dan Nicolaescu  <dann@ics.uci.edu>
